[package]
name = "test_ibverbs"
version = "0.1.0"
edition = "2021"
authors = ["Niklas Sombert <niklas.sombert@uni-duesseldorf.de>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_io = { path = "../../kernel/app_io" }
byteorder = { version = "1.4.3", default-features = false }
ibverbs = { path = "../../ports/ibverbs", default-features = false }
zerocopy = "0.5.2"
