[package]
name = "ibverbs-sys"
version = "0.1.0"
edition = "2021"
authors = ["Niklas Sombert <niklas.sombert@uni-duesseldorf.de>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.1"
mlx3 = { path = "../../kernel/mlx3" }
core2 = { path = "../../libs/core2", default-features = false }
