[package]
authors = ["Niklas Sombert <niklas.sombert@uni-duesseldorf.de>"]
name = "mlx3"
description = "Driver for the Mellanox ConnectX-3 NIC"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = { version = "1.4.3", default-features = false }
log = "0.4.4"
memory = { path = "../memory" }
num_enum_derive = "0.5"
pci = { path = "../pci" }
sleep = { path = "../sleep" }
sync_irq = { path = "../../libs/sync_irq" }
volatile = "0.2.7"
zerocopy = "0.5.0"

[lib]
crate-type = ["rlib"]
