[package]
authors = ["Niklas Sombert <niklas.sombert@uni-duesseldorf.de>"]
name = "mlx3"
description = "Driver for the Mellanox ConnectX-3 NIC"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.4.1"
byteorder = { version = "1.4.3", default-features = false }
log = "0.4.4"
mlx_infiniband = { path = "../mlx_infiniband" }
memory = { path = "../memory" }
modular-bitfield-msb = "0.11.2"
pci = { path = "../pci" }
sleep = { path = "../sleep" }
strum = { version = "0.26", default-features = false }
strum_macros = "0.26"
spin = "0.9.4"
sync_irq = { path = "../../libs/sync_irq" }
volatile = "0.2.7"
zerocopy = "0.5.2"

[lib]
crate-type = ["rlib"]
