[package]
authors = ["Niklas Sombert <niklas.sombert@uni-duesseldorf.de>"]
name = "mlx_infiniband"
description = "defines structs and traits for using Mellanox NICs with InfiniBand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.1"
strum_macros = "0.26"
